--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@wangyjhh/utils",
     "type": "module",
-    "version": "0.2.0",
+    "version": "1.2.0",
     "packageManager": "pnpm@10.11.0",
     "description": "wangyjhh utils.",
     "author": "wangyjhh",
@@ -27,13 +27,12 @@
         "access": "public"
     },
     "scripts": {
-        "lint": "eslint --cache .",
+        "lint": "eslint .",
         "lint:fix": "pnpm run lint --fix",
         "build": "tsdown",
         "dev": "tsdown --watch",
         "test": "vitest",
         "typecheck": "tsc --noEmit",
-        "format": "prettier --cache --write .",
         "release": "bumpp && pnpm publish",
         "prepublishOnly": "pnpm run build"
     },
