--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,22 @@
 {
     "compilerOptions": {
-        "target": "esnext",
-        "lib": ["es2023"],
+        "target": "ESNext",
+        "lib": ["ESNext"],
         "moduleDetection": "force",
-        "module": "preserve",
-        "moduleResolution": "bundler",
+        "module": "ESNext",
+        "moduleResolution": "node",
         "resolveJsonModule": true,
         "types": ["node"],
         "strict": true,
+        "strictNullChecks": true,
         "noUnusedLocals": true,
         "declaration": true,
         "emitDeclarationOnly": true,
+        "sourceMap": true,
         "esModuleInterop": true,
         "isolatedModules": true,
         "verbatimModuleSyntax": true,
+        "skipDefaultLibCheck": true,
         "skipLibCheck": true
     },
     "include": ["src"]
